A little brokwn, but I'm probably about to make the Celestial classes worse.  Trying to work with Promises and async functions to fix the order of operations.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
 		"target": "ES5",
 		"sourceMap": true,
 		"downlevelIteration": true,
-		"lib": ["es6" , "dom"]
+		"lib": ["es6" , "dom"],
+		"outFile": "bin/js/celestials.js",
+		"removeComments": true,
 	}
 }
