--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "ES5",
 		"sourceMap": true,
-		"downlevelIteration": true,
+		"module": "amd",
 		"lib": ["es6" , "dom"],
 		"outFile": "bin/js/celestials.js",
 		"removeComments": true,
