Current Celestials UI is a mess.  Attempting to fix.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"sourceMap": true,
 		"module": "amd",
 		"lib": ["es6" , "dom"],
-		"outFile": "bin/js/celestials.js",
-		"removeComments": true,
+		"outFile": "public/js/celestials.js",
+		"removeComments": true
 	}
 }
