--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"sourceMap": true,
 		"module": "amd",
 		"lib": ["es6" , "dom"],
-		"outFile": "public/js/celestials.js",
+		"outFile": "js/celestials.js",
 		"removeComments": true
 	}
 }
